--- a/index.css
+++ b/index.css
@@ -140,3 +140,59 @@ input[type="checkbox"]:checked+label {
     color: #adadad;
     opacity: .7;
 }
+@media (max-width: 768px) and (min-width: 576px) {
+    #header {
+        margin: 50px 0 0 0;
+    }   
+    #list {
+        margin: 0 0 30px 0;
+    }
+    .list__info{
+        justify-content: center;
+    }
+    .container{
+        max-width: none;
+        width: 100%;
+    }
+    .list__title{
+        font-size: 80px;
+        line-height: 48px;
+        justify-content: center;
+    }
+    .movie__wrapper{
+        width: 95%;
+    }
+    .form__input{
+        width: 85%;
+        font-size: 26px;
+        line-height: 40px;
+    }
+}
+@media (max-width: 575px) {
+    #header {
+        margin: 40px 0 0 0;
+    }    
+    #list {
+        margin: 0 0 25px 0;
+    }
+    .list__info{
+        justify-content: center;
+    }
+    .container{
+        max-width: none;
+        width: 100%;
+    }
+    .list__title{
+        font-size: 50px;
+        line-height: 28px;
+        justify-content: center;
+    }
+    .movie__wrapper{
+        width: 96%;
+    }
+    .form__input{
+        width: 75%;
+        font-size: 26px;
+        line-height: 40px;
+    }
+}
